@@ -1,3 +1,8 @@
+2010-08-27  Doug Evans  <dje@google.com>
+
+	* dwarf2read.c (dwarf2_per_objfile_free): Reorganize buffers to match
+	the order they're defined in.  munmap .debug_types buffer.
+
 2010-08-19  Stan Shebs  <stan@codesourcery.com>
 
 	* NEWS: Mention some additional changes.
